tests/valhalla/neg/TraitExtendsAnyRef2.scala
import scala.annotation.valhalla

trait Uni extends Any

@valhalla
trait AnyRefTrait extends Uni // error